# yocto_workshop_example

./: CMakeLists.txt  LICENSE  README.md
hello_yocto_from_git/: CMakeLists.txt  hello_yocto.c
